make table layout fixed to prevent overflow

--- a/app/components/base/table/table.scss
+++ b/app/components/base/table/table.scss
@@ -15,6 +15,7 @@ bl-table {
         border-collapse: collapse;
         overflow: hidden;
         display: table;
+        table-layout: fixed;
     }
 
     bl-thead {
